src/tiny-slider.scss
// tiny
[data-tns-role="wrapper"] {
  padding: 0 !important; // remove padding: clientWidth = width + padding (0) = width
  &.ms-touch {
    overflow-x: scroll;
    overflow-y: hidden;
    -ms-overflow-style: none; // Hides the scrollbar.
    -ms-scroll-chaining: none; // Prevents Metro from swiping to the next tab or app.
    -ms-scroll-snap-type: mandatory; // Forces a snap scroll behavior on your images.
    -ms-scroll-snap-points-x: snapInterval(0%, 100%); // Defines the y and x intervals to snap to when scrolling.
  }
}
[data-tns-role="content"] {
  position: relative;
  -webkit-transition: all 0s;
  -moz-transition: all 0s;
  transition: all 0s;
}
[data-tns-mode="carousel"][data-tns-axis="horizontal"] {
  left: 0;
  &:after {
    content: '';
    display: table;
    clear: both;
  }
  > div, > li, > span, > a {
    float: left;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
    overflow: hidden;
  }
}
[data-tns-mode="gallery"] {
  > div, > li, > span, > a {
    position: absolute;
    transition: transform 0s, opacity 0s;
  }
}
[data-tns-role="nav"] {
  button { vertical-align: middle; }
}
[data-tns-role="lazy-img"] {
  -webkit-transition: opacity 0.6s;
  transition: opacity 0.6s;
  opacity: 0.6;
  &.loaded { opacity: 1; }
}
[hidden] { display: none !important; }
[data-controls], [data-action], [data-nav]  {
  cursor: pointer;
  border-width: 0;
  padding: 0;
}
[data-tns-hidden="x"] { overflow-x: hidden; }
[data-tns-hidden="y"] { overflow-y: hidden; }
.tns-fadeIn {
  opacity: 1;
  filter: alpha(opacity=100);
  z-index: 0;
}
.tns-normal, .tns-fadeOut {
  opacity: 0;
  filter: alpha(opacity=0);
  z-index: -1;
}

